<resources>
    <string name="app_name">PatriotConnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_housing">Housing</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_authors">Authors</string>
    <string name="about_jack_email">Email:      jdfink@uncg.edu</string>
    <string name="about_jack">Jack</string>
    <string name="about_andrew">Andrew</string>
    <string name="about_andrew_email">Insert email here</string>
    <string name="about_kevin">Kevin</string>
    <string name="about_kevin_email">Insert email here</string>
    <string name="about_andy">Andy</string>
    <string name="about_andy_email">Insert email here</string>
    <string name="about_joey">Joey</string>
    <string name="about_joey_email">Insert email here</string>

    <!-- Housing Fragment String -->
    <string name="housing_fragment_nav_to_vha">VHA</string>

    <!-- Navigation Title Strings -->
    <string name="nav_housing_title">Housing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
